Fixed: medium interface jitters when changing wavelength in the 2nd tab--converted to use BufferedPhetPCanvas, see #2786
# 0.00.29 (50073) Mar 24, 2011
Fixed dispersion function so that air dispersion is modeled properly
Added interpolation between dispersion functions for air and glass
Increased number of decimal places for medium indices of refraction for "more tools" tab
Moved VelocitySensorNode to piccolo-phet for reuse in Fluid Pressure and Flow
Improved docs and API for VelocitySensorNode
# 0.00.28 (50003) Mar 20, 2011
Fixed: Sim speed doesn't reset
> Removed 'x' close button from intensity meter
Updated wave sensor to use new time units
Switched to use DataPoint instead of ImmutableVector2D to improve readability
Fixed time units so that dt is closer to 1E-14 instead of 1.0
> Fixed: If the user changes the index of refraction, it should be index at the laser's current wavelength
> Fixed: If the user changes the wavelength of light, the indices of refraction should change
Added the Sellmeier equation
Refactored dispersion to be part of medium instead of computed externally
Converted from Function2<Double,Double,Double> to named interface DispersionFunction
> Fixed: Tools should drop in the box when any piece is dropped in the box, not when the center of mass of all components is dropped in
# 0.00.27 (49883) Mar 16, 2011
# 0.00.26 (49881) Mar 16, 2011
Show speed vector at the tail instead of centered
In more tools tab, show clock controls if wave mode or if time chart is in the play area
Fixed: tools do not reset in reset all
Fixed: protractor does not reset in first two tabs
Fixed: protractor does not reset in prism break tab
Made velocity sensor node resize with text
Factored out CHARACTERISTIC_LENGTH instead of using WAVELENGTH_RED everywhere
Fixed: Made LaserColor.getWavelength() abstract and prevented from being called for white light
Fixed: Wavelength seems to get longer when moving to blue
Added another decimal point to the speed readout